--- a/css/custom.css
+++ b/css/custom.css
@@ -5,9 +5,22 @@
 }
 
 .mast-img {
-    width: auto; 
-    height: 90vh;
+    width: 70%; 
+    height: auto;
 }
+
+
+.mast-background {
+    width: 100%;
+    height: 100%;
+    /* background-color: aqua; */
+     background-image: url(../assets/img/background/img-00.jpg);
+    background-size: 100% auto;
+    /* background-position: top; */
+    background-repeat: no-repeat;
+    background-color: #e5eaeb;
+}
+
 
 .pole .navigation li:after {  
     width: 7px;
@@ -17,8 +30,8 @@
 
 @media only screen and (max-device-width: 481px) {
     .mast-img {
-        width: auto; 
-        height: 55vh;
+        width: 90%; 
+        height: auto;
     }
     
 }
